[package]
name = "bt-export-cli"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bt-export = { path = "../bt-export" }
bt-save = { path = "../bt-save" }
color-eyre = "0.5.11"
indicatif = "0.16.2"
structopt = "0.3.21"
